0.02
 - Add Test::NoWarnings to version test.

0.01 2015-03-17T10:54:46+01:00
 - First version.