@@ -22,6 +22,7 @@ meta-spec:
 name: Tags-Output-Indent
 no_index:
   directory:
+    - examples
     - inc
     - t
 requires:
